<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    android:clickable="true"
    android:focusable="true"
    tools:context=".GameActivity">


    <TextView
        android:id="@+id/textView_game2_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game2_name"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton_game2"
        app:layout_constraintStart_toStartOf="@+id/imageButton_game2" />

    <ImageButton
        android:id="@+id/imageButton_back"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/ic_arrow_back_black_24dp"
        android:contentDescription="@string/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/days_in_a_row"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days_default"
        android:textColor="@color/colorWhite"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title" />


    <ImageButton
        android:id="@+id/imageButton_game1"
        android:layout_width="255dp"
        android:layout_height="200dp"
        android:contentDescription="@string/game1_button_description"
        android:cropToPadding="true"
        android:scaleType="fitXY"
        android:src="@drawable/memory_builder_screenshot"
        app:layout_constraintBottom_toTopOf="@+id/imageButton_game2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_days" />

    <ImageButton
        android:id="@+id/imageButton_game2"
        android:layout_width="255dp"
        android:layout_height="200dp"
        android:contentDescription="@string/game2_button_description"
        android:cropToPadding="true"
        android:scaleType="fitXY"
        android:src="@drawable/ball_drop_screenshot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_days"
        app:layout_constraintVertical_bias="0.846" />

    <ImageButton
        android:id="@+id/imageButton_game1_info"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/ic_info_outline_black_24dp"
        android:contentDescription="@string/info_button_description"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton_game1"
        app:layout_constraintStart_toEndOf="@+id/imageButton_game1"
        app:layout_constraintTop_toTopOf="@+id/imageButton_game1" />

    <ImageButton
        android:id="@+id/imageButton_game2_info"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/ic_info_outline_black_24dp"
        android:contentDescription="@string/info_button_description"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton_game2"
        app:layout_constraintStart_toEndOf="@+id/imageButton_game2"
        app:layout_constraintTop_toTopOf="@+id/imageButton_game2" />

    <TextView
        android:id="@+id/textView_game1_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game1_name"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton_game1"
        app:layout_constraintStart_toStartOf="@+id/imageButton_game1" />

</androidx.constraintlayout.widget.ConstraintLayout>