<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    tools:context=".SettingsActivity"
    android:clickable="true"
    android:focusable="true">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="176dp"
        android:layout_height="132dp"
        android:contentDescription="@string/settings_cog_description"
        app:layout_constraintBottom_toTopOf="@+id/textView_spinner_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_settings_black_24dp" />

    <TextView
        android:id="@+id/textView_spinner_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_difficulty"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/spinner_difficulty"
        app:layout_constraintStart_toStartOf="@+id/spinner_difficulty" />

    <Spinner
        android:id="@+id/spinner_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/difficulty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Switch
        android:id="@+id/switch_sound"
        style="@style/CustomSwitch"
        android:layout_width="132dp"
        android:layout_height="60dp"
        android:text="@string/sound"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_difficulty" />

    <Switch
        android:id="@+id/switch_online"
        style="@style/CustomSwitch"
        android:layout_width="132dp"
        android:layout_height="60dp"
        android:text="@string/online"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_sound" />

    <Button
        android:id="@+id/button_save_settings"
        style="@style/CustomButton"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="5dp"
        android:onClick="saveClicked"
        android:text="@string/save"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButton_back"
        android:layout_width="46dp"
        android:layout_height="45dp"
        android:background="@drawable/ic_arrow_back_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="backClicked"
        android:contentDescription="@string/back_arrow" />

</androidx.constraintlayout.widget.ConstraintLayout>